서블릿 내용 수정 - 로그인 체크 기능 및 로그인 시에만 게시판 이용 가능하도록 수정

--- a/MidTest0229/src/main/webapp/web.xml
+++ b/MidTest0229/src/main/webapp/web.xml
@@ -8,6 +8,6 @@
   
   <servlet-mapping>
   	<servlet-name>action</servlet-name>
-  	<url-pattern>*.do</url-pattern>
+  	<url-pattern>*.checkSwing</url-pattern>
   </servlet-mapping>
 </web-app>
