--- a/Day43_240305_Spring/.project
+++ b/Day43_240305_Spring/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Day43_240305_Maven2</name>
+	<name>Day43_240305_Spring</name>
 	<comment></comment>
 	<projects>
 	</projects>
